--- a/public_html/styles/rickies.css
+++ b/public_html/styles/rickies.css
@@ -1884,9 +1884,7 @@ mark {
   transition-delay: 0s;
   transition-duration: 300ms;
   box-shadow: 0px 1px 6px rgba(51, 63, 72, 0.5);
-  background: rgba(255, 255, 255, 0.8);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  background: rgba(255, 255, 255, 0.9);
 }
 #pick_filter_sheet[open] > summary {
   color: var(--link-color);
@@ -1907,16 +1905,18 @@ mark {
 }
 @media (prefers-color-scheme: dark) {
   #pick_filter_sheet[open] {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.95);
   }
 }
-@supports not ((-webkit-backdrop-filter: blur(20px)) and (backdrop-filter: blur(20px))) {
+@supports (-webkit-backdrop-filter: blur(20px)) or (backdrop-filter: blur(20px)) {
   #pick_filter_sheet[open] {
-    background: rgba(255, 255, 255, 0.9);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.8);
   }
   @media (prefers-color-scheme: dark) {
     #pick_filter_sheet[open] {
-      background: rgba(0, 0, 0, 0.95);
+      background: rgba(0, 0, 0, 0.8);
     }
   }
 }
